# haskell-go

./: .ghci  .gitignore  .travis.yml  Dockerfile  Jenkinsfile  README.md  gho.cabal  haskell-go.cabal  lambda.cabal  tmp
examples/: shortvardecl.go  vardecl.go
src/: .Main.hs.swp  AST.hs  AlexToken.x  Eval.hs  Expr.hs  Gho.hs  HappyParser.y  Lexer.hs  Main.hs  Pretty.hs  Verify.hs  example.hs  example.y
test/: MainTest.hs  block1.expected  block1.go  constDecl1.expected  constDecl1.go  funcDecl1.expected  funcDecl1.go  funcDecl2.go  funcDecl3.expected  ifStmt1.expected  ifStmt1.go  ifStmt2.expected  ifStmt2.go  ifStmt3.expected  ifStmt3.go  ifStmt4.expected  ifStmt4.go  ifStmt5.expected  ifStmt5.go  ifStmt6.expected  ifStmt6.go  num1.expected  string1.expected  string1.go  stringDecl1.expected  stringDecl1.go  subExpr1.expected  subExpr1.go  typeDecl1.expected  typeDecl1.go  typeDecl1.in  var1.expected  var1.go  varDecl1.expected  varDecl1.go  varDecl1.in  varDecl2.expected  varDecl2.go  varDecl3.expected  varDecl3.go
test/execution/: assign1.expected  assign1.go  call1.go  funcDecl1.go  funcDecl2.expected  funcDecl2.go  ifStmt1.go  ifStmt2.go  ifStmt3.go  precedence1.go  precedence2.go  precedence3.go  printString1.go  recurse1.go  return1.go  return2.go  scope1.go  scope2.expected  scope2.go  scope3.go  shortVardecl1.expected  shortVardecl1.go  struct1.go  struct2.go  struct3.expected  struct3.go  struct4.go  struct5.go  struct6.expected  struct6.go  struct7.expected  struct7.go  struct8.expected  struct8.go  values1.expected  values1.go  varDecl1.go  varDecl2.go  varDecl3.go  varDecl4.go  (+7 more)
test/execution/tmp/: ifStmt2.go  ifStmt3.go  return1.go  scope2.go  varDecl1.go  varDecl3.go
test/executionold/: ifStmt2.go  precedence2.go  scope2.go  varDecl5.go
test/parse/: block1.expected  block1.go  constDecl1.expected  funcDecl1.expected  funcDecl1.go  funcDecl2.expected  funcDecl2.go  funcDecl3.expected  funcDecl3.go  ifStmt1.expected  ifStmt1.go  ifStmt2.expected  ifStmt2.go  ifStmt3.expected  ifStmt3.go  ifStmt4.expected  ifStmt4.go  ifStmt5.expected  ifStmt5.go  ifStmt6.expected  ifStmt6.go  method1.expected  method1.go  num1.expected  num1.go  operand1.expected  operand1.go  operand2.expected  operand2.go  operand3.expected  operand3.go  string1.expected  string1.go  stringDecl1.go  struct1.expected  struct1.go  struct2.expected  struct2.go  struct3.expected  struct3.go  (+12 more)
test/parse/parse2/: constDecl1.expected  constDecl1.go  stringDecl1.expected  subExpr1.expected  subExpr1.go  var1.expected  varDecl1.expected
test/parseold/: funcDecl2.expected  funcDecl3.expected  funcDecl3.go  ifStmt1.expected  ifStmt4.expected  ifStmt5.expected  ifStmt6.go  struct2.go  subExpr1.expected  varDecl3.expected  varDecl3.go
