Name:           haskell-go
Version:        0.1
Cabal-Version:  == 1.22.5
License:        GPL-2
Author:         Johan Andersson
Synopsis:       
Build-Type:     Simple
  
Executable gho
  Main-Is:          Main.hs
  Other-modules:    AlexToken, HappyParser, Eval, AST, Verify, Gho
  Hs-Source-Dirs:   src
  Build-Depends:    base >= 4,
                    parsec == 3.1.11,
                    array,
                    HUnit == 0.3.0.2,
                    containers == 0.5.6.2,
                    text == 1.2.2.1,
                    directory >= 1.3.1.1,
                    MissingH == 1.4.0.1
  GHC-Options:    -Wall

    
test-suite tests
    type:           exitcode-stdio-1.0
    Other-modules:    AlexToken, HappyParser, Eval, AST, Verify
    Hs-Source-Dirs: test, src
    main-is:        Verify.hs
    build-depends:  base, 
                    test-framework == 0.8.1.1,
                    test-framework-hunit == 0.3.0.2,
                    HUnit == 0.3.0.2, 
                    containers >= 0.5.6.2 ,
                    text == 1.2.2.1,
                    parsec == 3.1.11,
                    directory >= 1.3.1.1,
                    MissingH == 1.4.0.1,
                    array
    default-language:    Haskell2010
