Name:           haskell-go
Version:        0.1
Cabal-Version:  >= 1.18.1
Tested-With: GHC >= 7.10.3
License:        GPL-2
Author:         Johan Andersson
Synopsis:       
Build-Type:     Simple
  
Executable gho
  Main-Is:          Main.hs
  Other-modules:    AlexToken, HappyParser, Eval, AST, Verify, Gho
  Hs-Source-Dirs:   src
  Build-Depends:    base >= 4,
                    parsec ,
                    array,
                    HUnit ,
                    containers,
                    text ,
                    directory ,
                    MissingH 
  GHC-Options:    -Wall
  default-language:    Haskell2010

    
test-suite tests
    type:           exitcode-stdio-1.0
    Other-modules:    AlexToken, HappyParser, Eval, AST, Verify
    Hs-Source-Dirs: test, src
    main-is:        Verify.hs
    build-depends:  base, 
                    test-framework ,
                    test-framework-hunit ,
                    HUnit , 
                    containers ,
                    text ,
                    parsec ,
                    directory ,
                    MissingH,
                    array
  default-language:    Haskell2010
