Name:           haskell-go
Version:        0.1
Cabal-Version:  >= 1.2
License:        GPL-2
Author:         Johan Andersson
Synopsis:       
Build-Type:     Simple
  
Executable lambda
  Main-Is:        Main.hs
  Other-modules:  AlexToken,HappyParser
  Hs-Source-Dirs: src
  Build-Depends:  base >= 4,parsec >= 3,array
  GHC-Options:    -Wall

